# Generated by Django 4.2.25 on 2025-10-20 03:33

from django.conf import settings
import django.core.validators
from django.db import migrations, models
import django.db.models.deletion
import django.utils.timezone
import uuid


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
        ('accounts', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='StudentProfile',
            fields=[
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, primary_key=True, related_name='student_profile', serialize=False, to=settings.AUTH_USER_MODEL)),
                ('student_id', models.CharField(help_text='Unique student ID number', max_length=20, unique=True)),
                ('program', models.CharField(choices=[('CS', 'Computer Science'), ('IT', 'Information Technology'), ('CE', 'Computer Engineering'), ('EE', 'Electrical Engineering'), ('ME', 'Mechanical Engineering'), ('IE', 'Industrial Engineering'), ('ARCH', 'Architecture'), ('BA', 'Business Administration'), ('ACCT', 'Accountancy'), ('OTHER', 'Other')], help_text='Academic program/course', max_length=10)),
                ('year_level', models.CharField(choices=[('1', '1st Year'), ('2', '2nd Year'), ('3', '3rd Year'), ('4', '4th Year'), ('5', '5th Year')], help_text='Current year level', max_length=1)),
                ('sex', models.CharField(choices=[('M', 'Male'), ('F', 'Female')], max_length=1)),
                ('date_of_birth', models.DateField(help_text='Date of birth')),
                ('contact_number', models.CharField(help_text='Primary contact number', max_length=20)),
                ('address', models.TextField(help_text='Complete address')),
                ('emergency_contact_name', models.CharField(help_text='Name of emergency contact person', max_length=200)),
                ('emergency_contact_relationship', models.CharField(help_text='Relationship to emergency contact', max_length=100)),
                ('emergency_contact_number', models.CharField(help_text='Emergency contact phone number', max_length=20)),
                ('emergency_contact_address', models.TextField(blank=True, help_text='Emergency contact address', null=True)),
                ('height_cm', models.DecimalField(blank=True, decimal_places=2, help_text='Height in centimeters', max_digits=5, null=True, validators=[django.core.validators.MinValueValidator(50), django.core.validators.MaxValueValidator(300)])),
                ('weight_kg', models.DecimalField(blank=True, decimal_places=2, help_text='Weight in kilograms', max_digits=5, null=True, validators=[django.core.validators.MinValueValidator(20), django.core.validators.MaxValueValidator(300)])),
                ('blood_type', models.CharField(choices=[('A+', 'A+'), ('A-', 'A-'), ('B+', 'B+'), ('B-', 'B-'), ('AB+', 'AB+'), ('AB-', 'AB-'), ('O+', 'O+'), ('O-', 'O-'), ('UNKNOWN', 'Unknown')], default='UNKNOWN', help_text='Blood type', max_length=10)),
                ('allergies', models.TextField(blank=True, help_text='Known allergies (comma-separated)', null=True)),
                ('current_medications', models.TextField(blank=True, help_text='Current medications being taken', null=True)),
                ('immunization_history', models.TextField(blank=True, help_text='Immunization and vaccination history', null=True)),
                ('medical_history', models.TextField(blank=True, help_text='Past medical conditions and surgeries', null=True)),
                ('last_dental_visit', models.DateField(blank=True, help_text='Date of last dental visit', null=True)),
                ('oral_habits', models.TextField(blank=True, help_text='Oral habits (e.g., teeth grinding, smoking)', null=True)),
                ('dental_history', models.TextField(blank=True, help_text='Previous dental procedures and concerns', null=True)),
                ('is_complete', models.BooleanField(default=False, help_text='Whether profile is complete')),
                ('is_verified', models.BooleanField(default=False, help_text='Whether profile has been verified by staff')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'student profile',
                'verbose_name_plural': 'student profiles',
                'ordering': ['-created_at'],
                'indexes': [models.Index(fields=['student_id'], name='students_st_student_58f688_idx'), models.Index(fields=['program', 'year_level'], name='students_st_program_c56c4c_idx'), models.Index(fields=['is_verified'], name='students_st_is_veri_b088f6_idx')],
            },
        ),
        migrations.CreateModel(
            name='RecordUpdateRequest',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('field_name', models.CharField(help_text='Name of field being updated', max_length=100)),
                ('old_value', models.TextField(blank=True, help_text='Previous value', null=True)),
                ('new_value', models.TextField(help_text='New requested value')),
                ('reason', models.TextField(help_text='Reason for update request')),
                ('supporting_document', models.FileField(blank=True, help_text='Supporting documents (medical certificates, etc.)', null=True, upload_to='update_requests/documents/%Y/%m/')),
                ('status', models.CharField(choices=[('pending', 'Pending Review'), ('approved', 'Approved'), ('declined', 'Declined'), ('expired', 'Expired')], default='pending', max_length=10)),
                ('review_notes', models.TextField(blank=True, help_text='Notes from reviewer', null=True)),
                ('reviewed_at', models.DateTimeField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('expiry_date', models.DateTimeField(help_text='Request expires after 7 days')),
                ('reviewed_by', models.ForeignKey(blank=True, limit_choices_to={'role__in': ['doctor', 'admin']}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='reviewed_requests', to=settings.AUTH_USER_MODEL)),
                ('student', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='update_requests', to='students.studentprofile')),
            ],
            options={
                'verbose_name': 'update request',
                'verbose_name_plural': 'update requests',
                'ordering': ['-created_at'],
                'indexes': [models.Index(fields=['student', 'status'], name='students_re_student_7341ec_idx'), models.Index(fields=['status', 'expiry_date'], name='students_re_status_2fc213_idx'), models.Index(fields=['created_at'], name='students_re_created_38a1ee_idx')],
            },
        ),
        migrations.CreateModel(
            name='MedicalRecord',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('record_type', models.CharField(choices=[('medical', 'Medical'), ('dental', 'Dental')], default='medical', max_length=10)),
                ('visit_date', models.DateField(default=django.utils.timezone.now, help_text='Date of consultation/visit')),
                ('chief_complaint', models.TextField(help_text='Main reason for visit')),
                ('diagnosis', models.TextField(help_text='Diagnosis or findings')),
                ('procedure', models.TextField(blank=True, help_text='Procedures performed', null=True)),
                ('prescription', models.TextField(blank=True, help_text='Medications prescribed', null=True)),
                ('remarks', models.TextField(blank=True, help_text='Additional notes and observations', null=True)),
                ('blood_pressure', models.CharField(blank=True, help_text='Blood pressure (e.g., 120/80)', max_length=20, null=True)),
                ('temperature', models.DecimalField(blank=True, decimal_places=1, help_text='Temperature in Celsius', max_digits=4, null=True)),
                ('pulse_rate', models.IntegerField(blank=True, help_text='Pulse rate (bpm)', null=True)),
                ('respiratory_rate', models.IntegerField(blank=True, help_text='Respiratory rate (breaths per minute)', null=True)),
                ('lab_results', models.FileField(blank=True, help_text='Laboratory results (PDF, images)', null=True, upload_to='medical_records/lab_results/%Y/%m/')),
                ('xray_image', models.ImageField(blank=True, help_text='X-ray or dental images', null=True, upload_to='medical_records/xrays/%Y/%m/')),
                ('attachments', models.FileField(blank=True, help_text='Other supporting documents', null=True, upload_to='medical_records/attachments/%Y/%m/')),
                ('status', models.CharField(choices=[('pending', 'Pending Review'), ('approved', 'Approved'), ('declined', 'Declined')], default='approved', help_text='Record approval status', max_length=10)),
                ('approved_at', models.DateTimeField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('approved_by', models.ForeignKey(blank=True, limit_choices_to={'role__in': ['doctor', 'admin']}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='approved_records', to=settings.AUTH_USER_MODEL)),
                ('doctor', models.ForeignKey(blank=True, limit_choices_to={'role__in': ['doctor', 'admin']}, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='created_records', to=settings.AUTH_USER_MODEL)),
                ('student', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='medical_records', to='students.studentprofile')),
            ],
            options={
                'verbose_name': 'medical record',
                'verbose_name_plural': 'medical records',
                'ordering': ['-visit_date', '-created_at'],
                'indexes': [models.Index(fields=['student', 'record_type'], name='students_me_student_9f445d_idx'), models.Index(fields=['status', 'visit_date'], name='students_me_status_829130_idx'), models.Index(fields=['created_at'], name='students_me_created_e009cb_idx')],
            },
        ),
    ]
